# rust-backend-project

./: README.md
outputs/: GITHUB_SETUP_GUIDE.md  QUICK_GITHUB_REFERENCE.md  README.md  setup-github.sh
outputs/rust-python-integration/: .gitignore  KEY_CONCEPTS.md  LANGUAGE_COMPARISON.md  LICENSE  Makefile  NAVIGATION.md  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  SETUP.md  pyproject.toml  requirements.txt
outputs/rust-python-integration/examples/: basic_usage.py  benchmark.py  generate_sample_data.py
outputs/rust-python-integration/python_orchestrator/log_processor/: __init__.py  pipeline.py  pure_python.py
outputs/rust-python-integration/rust_processor/: Cargo.toml
outputs/rust-python-integration/rust_processor/src/: lib.rs
outputs/typescript-rust-integration/: .gitignore  LICENSE  README.md
