[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rust-log-processor"
version = "0.1.0"
description = "High-performance log processing with Rust and Python"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["rust", "python", "performance", "log-processing", "pyo3"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "maturin>=1.0",
    "pytest>=7.0",
    "black>=22.0",
    "mypy>=0.990",
]

[project.urls]
Homepage = "https://github.com/yourusername/rust-python-integration"
Documentation = "https://github.com/yourusername/rust-python-integration/blob/main/README.md"
Repository = "https://github.com/yourusername/rust-python-integration"

[tool.maturin]
# Path to the Rust project
manifest-path = "rust_processor/Cargo.toml"
# Build in release mode for better performance
features = ["pyo3/extension-module"]
python-source = "python_orchestrator"
module-name = "rust_processor"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
