[package]
name = "rust_processor"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_processor"
# "cdylib" is necessary to produce a shared library for Python to import
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module", "anyhow"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
